# To-do_List

./: .gitignore  LICENSE  README.md  To-do.py  pyproject.toml  requirements.txt  run.py
Multi Platform App work in progress/: APK_Guide.md  README.md  main.kv  main.py  tasks.json
Old_version/: tasks.json  todo_list.py
multiplatform/: .gitignore
src/todo_app/: __init__.py  __main__.py  app.py  constants.py  storage.py  themes.py
tests/: test_storage.py
