[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "todo-app"
version = "2.0.0"
description = "A modern, feature-rich To-Do List application built with Python and Tkinter."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kritagya Kumar (Benny Aliston)", email = ""}
]
keywords = ["todo", "task-manager", "tkinter", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "tkcalendar>=1.6.1",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/BennyAliston/To-do_List"
Repository = "https://github.com/BennyAliston/To-do_List"
Issues = "https://github.com/BennyAliston/To-do_List/issues"

[project.scripts]
todo-app = "todo_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
